--- a/.gitignore
+++ b/.gitignore
@@ -72,7 +72,7 @@ web_modules/
 
 # Yarn Integrity file
 .yarn-integrity
-
+src/config.env
 # dotenv environment variable files
 .env
 .env.development.local
