--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "author": "Kunga Tashi",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.31",
     "nodemon": "^2.0.16",
@@ -20,9 +23,15 @@
     "typescript": "^4.6.4"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.2",
     "morgan": "^1.10.0"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
