--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node dist/server.js",
     "build": "tsc",
+    "gcp-build": "tsc",
     "start:dev": "nodemon src/server.ts"
   },
   "keywords": [],
