--- a/.gitignore
+++ b/.gitignore
@@ -72,7 +72,9 @@ web_modules/
 
 # Yarn Integrity file
 .yarn-integrity
-src/config.env
+.gcloudignore
+/config.env
+/app.yaml
 # dotenv environment variable files
 .env
 .env.development.local
